force-app/main/default/objects/Sales_Debrief_Config_Question__c/Sales_Debrief_Config_Question__c.object-meta.xml
<CustomObject>
    <label>Sales Debrief Config Question</label>
    <nameField>
        <displayFormat>SDCQ-{0000}</displayFormat>
        <label>Sales Debrief Config Question Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Debrief Config Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>