force-app/main/default/objects/Sales_Debrief_Config_Question__c/fields/All_Conditions_Met__c.field-meta.xml
<CustomField>
    <fullName>All_Conditions_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Conditions Met</label>
    <type>Checkbox</type>
</CustomField>