force-app/main/default/objects/Sales_Debrief_Config_Question__c/fields/Api__c.field-meta.xml
<CustomField>
    <fullName>Api__c</fullName>
    <description>Object level Api Name of the question</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Api</label>
    <length>255</length>
    <type>Text</type>
</CustomField>