force-app/main/default/objects/Sales_Debrief_Config_Question__c/fields/Child_Component__c.field-meta.xml
<CustomField>
    <fullName>Child_Component__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child Component</label>
    <type>Checkbox</type>
</CustomField>