force-app/main/default/objects/Sales_Debrief_Config_Question__c/fields/Child_Component_Datatype__c.field-meta.xml
<CustomField>
    <fullName>Child_Component_Datatype__c</fullName>
    <label>Child Component Datatype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Table</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>