force-app/main/default/objects/Sales_Debrief_Config_Question__c/fields/Child_Component_Field_Set__c.field-meta.xml
<CustomField>
    <fullName>Child_Component_Field_Set__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Child Component Field Set</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>