force-app/main/default/objects/Sales_Debrief_Config_Question__c/fields/Client_Strategy_Index__c.field-meta.xml
<CustomField>
    <fullName>Client_Strategy_Index__c</fullName>
    <label>Client Strategy Index</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>