force-app/main/default/objects/Sales_Debrief_Config_Question__c/fields/Controlling_Question_1__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Question_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Controlling Question 1</label>
    <referenceTo>Sales_Debrief_Config_Question__c</referenceTo>
    <relationshipLabel>Sales Debrief Config Questions</relationshipLabel>
    <relationshipName>Dependent_Question_1</relationshipName>
    <type>Lookup</type>
</CustomField>