force-app/main/default/objects/Sales_Debrief_Config_Question__c/fields/Controlling_Question_2__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Question_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Controlling Question 2</label>
    <referenceTo>Sales_Debrief_Config_Question__c</referenceTo>
    <relationshipLabel>Dependent Question 2</relationshipLabel>
    <relationshipName>Dependent_Question_2</relationshipName>
    <type>Lookup</type>
</CustomField>