force-app/main/default/objects/Sales_Debrief_Config_Question__c/fields/Controlling_Question_3__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Question_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Controlling Question 3</label>
    <referenceTo>Sales_Debrief_Config_Question__c</referenceTo>
    <relationshipLabel>Sales Debrief Config Questions (Dependent Question 3)</relationshipLabel>
    <relationshipName>Dependent_Question_3</relationshipName>
    <type>Lookup</type>
</CustomField>