force-app/main/default/objects/Sales_Debrief_Config_Question__c/fields/Controlling_Value_1__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Value_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Controlling Value 1</label>
    <referenceTo>Sales_Debrief_Config_Answer__c</referenceTo>
    <relationshipLabel>Sales Debrief Config Questions</relationshipLabel>
    <relationshipName>Controlling_Value_1</relationshipName>
    <type>Lookup</type>
</CustomField>