force-app/main/default/objects/Sales_Debrief_Config_Question__c/fields/Controlling_Value_3__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Value_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Controlling Value 3</label>
    <referenceTo>Sales_Debrief_Config_Answer__c</referenceTo>
    <relationshipLabel>Sales Debrief Config Questions (Dependent Choice 3)</relationshipLabel>
    <relationshipName>Controlling_Value_3</relationshipName>
    <type>Lookup</type>
</CustomField>