force-app/main/default/objects/Sales_Debrief_Config_Question__c/fields/Dependency_Logic__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Logic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dependency Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>