force-app/main/default/objects/Sales_Debrief_Config_Question__c/fields/External_Question_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Question_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Question Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>