force-app/main/default/objects/Sales_Debrief_Config_Question__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <description>Questions in UI are displayed in this order</description>
    <label>Index</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>