force-app/main/default/objects/Sales_Debrief_Config_Question__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Debrief</fullName>
            </value>
            <value>
                <fullName>Client Strategy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>