force-app/main/default/objects/Sales_Debrief_Config_Question__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>Long form of the Question</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>