force-app/main/default/objects/Sales_Debrief_Config_Question__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Mandatory fields</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>