force-app/main/default/objects/Sales_Debrief_Config_Question__c/fields/Sales_Debrief_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Debrief_Type__c</fullName>
    <label>Sales Debrief Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Specialty</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>