force-app/main/default/objects/Sales_Debrief_Config_Question__c/fields/Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Section_Name__c</fullName>
    <description>To which section does the question belong</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Section Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>