force-app/main/default/objects/Sales_Debrief_Config_Question__c/fields/Short_Form__c.field-meta.xml
<CustomField>
    <fullName>Short_Form__c</fullName>
    <description>Short Form of the question</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Short Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>