force-app/main/default/objects/Sales_Debrief_Config_Question__c/fields/Specialty_Index__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Index__c</fullName>
    <label>Specialty Index</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>