force-app/main/default/objects/Sales_Debrief_Config_Question__c/fields/Write_In__c.field-meta.xml
<CustomField>
    <fullName>Write_In__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Write In</label>
    <length>255</length>
    <type>Text</type>
</CustomField>