force-app/main/default/objects/Sales_Debrief_Config_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>Short_Form__c</columns>
    <columns>Section_Name__c</columns>
    <columns>Api__c</columns>
    <columns>Index__c</columns>
    <columns>Medical_Index__c</columns>
    <columns>Specialty_Index__c</columns>
    <columns>Is_Dependent_Question__c</columns>
    <columns>Dependency_Logic__c</columns>
    <columns>Child_Component__c</columns>
    <columns>Child_Component_Datatype__c</columns>
    <columns>Child_Component_Field_Set__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2027</value>
    </filters>
    <label>All</label>
</ListView>