force-app/main/default/objects/Sales_Debrief_Config_Question__c/listViews/X2026_Questionnaire.listView-meta.xml
<ListView>
    <fullName>X2026_Questionnaire</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>Medical_Index__c</columns>
    <columns>Sales_Debrief_Type__c</columns>
    <columns>Section_Name__c</columns>
    <columns>Specialty_Index__c</columns>
    <columns>Year__c</columns>
    <columns>Api__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2026</value>
    </filters>
    <filters>
        <field>Module__c</field>
        <operation>equals</operation>
        <value>Client Strategy</value>
    </filters>
    <label>2026 Questionnaire</label>
</ListView>